--- a/templates/main_page/home.html
+++ b/templates/main_page/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    <img src="{% static 'main_page/images/logo.png' %}" alt="Cryptomus Logo" class="logo">
     <img src="{% static 'main_page/images/cryptomus_3.png' %}" alt="Cryptomus 3" class="layered-image">
     <img src="{% static 'main_page/images/cryptomus_4.png' %}" alt="Cryptomus 4" class="layered-image">
     <img src="{% static 'main_page/images/cryptomus_5.png' %}" alt="Cryptomus 5" class="layered-image">
